--- a/website_flex_grid/index.html
+++ b/website_flex_grid/index.html
@@ -76,5 +76,92 @@
             </div>
         </div>
     </section>
+
+    <!-- CLi -->
+
+    <section class="cli">
+        <div class="container grid">
+            <img src="./images/heroku.jpeg" alt="Heroku">
+            <div class="card">
+                <h3>Easy to use, cross platform CLI</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in Seconds</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Cloud Hosting like you've never seen. Fast, efficient and scalable</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="./images/cloud.jpeg" alt="iCloud">
+        </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Supported Languages
+        </h2>
+
+        <div class="container flex">
+            <div class="card">
+                <h4>Mario</h4>
+                <img src="./images/maxresdefault.jpeg" alt="Mario">
+            </div>
+            <div class="card">
+                <h4>Donkey</h4>
+                <img src="images/donkey.jpeg" alt="Donkey Kong">
+              </div>
+              <div class="card">
+                <h4>Link</h4>
+                <img src="images/link.jpeg" alt="Link">
+              </div>
+              <div class="card">
+                <h4>Samus</h4>
+                <img src="images/samus.jpeg" alt="Samus">
+              </div>
+              <div class="card">
+                <h4>Yoshi</h4>
+                <img src="images/yoshi.jpeg" alt="Yoshi">
+              </div>
+              <div class="card">
+                <h4>Kirby</h4>
+                <img src="images/kirby.jpeg" alt="Kirby">
+              </div>
+              <div class="card">
+                <h4>Fox</h4>
+                <img src="images/fox.jpeg" alt="Fox">
+              </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Dobi Dobot</h1>
+                <p>Copyright &copy; 2021</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
