--- a/microsoft_clone/index.html
+++ b/microsoft_clone/index.html
@@ -80,6 +80,63 @@
                 <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
             </div>
         </section>
+
+        <!-- Xbox -->
+        <section class="xbox">
+            <div class="content">
+                <h2>Xbox Game Pass Ultimate</h2>
+                <p>Xbox Games Pass Ultimate Xobox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next favorite game.</p>
+                <a href="#" class="btn">
+                    Join Now <i class="fas fa-chevron-right"></i>
+                </a>
+            </div>
+        </section>
+
+        <!-- Home cards 2-->
+
+        <section class="home-cards">
+            <div>
+                <img src="" alt="">
+                <h3>Microsoft Teams</h3>
+                <p>
+                    Unleash the power of your team.
+                </p>
+                <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Unlock the power of learning</h3>
+                <p>Get students future-ready with Windows 10 devices. Starting at $219.</p>
+                <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Windows 10 Enterprise</h3>
+                <p>
+                    Download the free 90-day evaluation for IT professionals.
+                </p>
+                <a href="#">Show Now <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Explore Kubernetes</h3>
+                <p>
+                    Learn how Kubernetes works and get started with cloud native app development today.
+                </p>
+                <a href="#">Show Now <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+
+        <!-- Carbon -->
+        <section class="carbon dark">
+            <div class="content">
+                <h2>Commiting To Carbon Negative </h2>
+                <p>Microsoft will be carbon negative by 2030 and by 2050 we will remove all carbon the company has emitted since it was founded in 1975.</p>
+                <a href="#" class="btn">
+                    Learn More <i class="fas fa-chevron-right"></i>
+                </a>
+            </div>
+        </section>
     </div>
 </body>
 
