--- a/microsoft_clone/index.html
+++ b/microsoft_clone/index.html
@@ -9,6 +9,9 @@
     <title>Microsoft Official Homepage</title>
 </head>
 <body>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
     <div class="container">
         <!-- Navbar -->
         <nav class="main-nav">
@@ -96,7 +99,7 @@
 
         <section class="home-cards">
             <div>
-                <img src="" alt="">
+                <img src="./img/microsoftteam.jpeg" alt="Microsoft Teams">
                 <h3>Microsoft Teams</h3>
                 <p>
                     Unleash the power of your team.
@@ -104,13 +107,13 @@
                 <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/teamwork.jpeg" alt="Teamwork">
                 <h3>Unlock the power of learning</h3>
                 <p>Get students future-ready with Windows 10 devices. Starting at $219.</p>
                 <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/windows10.png" alt="Windows 10">
                 <h3>Windows 10 Enterprise</h3>
                 <p>
                     Download the free 90-day evaluation for IT professionals.
@@ -118,7 +121,7 @@
                 <a href="#">Show Now <i class="fas fa-chevron-right"></i></a>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/kubernetes.jpeg" alt="Kubernetes">
                 <h3>Explore Kubernetes</h3>
                 <p>
                     Learn how Kubernetes works and get started with cloud native app development today.
@@ -137,9 +140,96 @@
                 </a>
             </div>
         </section>
+
+        <!-- Follow -->
+        <section class="follow">
+            <p>Follow Microsoft</p>
+            <a href="https://facebook.com">
+                <img src="img/facebook-512.png" alt="Facebook">
+            </a>
+            <a href="https://github.com">
+                <img src="img/githubicon.png" alt="Github">
+            </a>
+            <a href="https://linkedin.com">
+                <img src="img/linkedin-logo-copy.png" alt="LinkedIn">
+            </a>
+        </section>
     </div>
+        <!-- Links -->
+        <section class="links">
+            <div class="links-inner">
+                <ul>
+                <li><h3>What's New</h3></li>
+                <li><a href="#">Surface Pro X</a></li>
+                <li><a href="#">Surface Laptop 3</a></li>
+                <li><a href="#">Surface Pro 7</a></li>
+                <li><a href="#">Windows 10 Apps</a></li>
+                <li><a href="#">Office Apps</a></li>
+            </ul>
+            <ul>
+                <li><h3>Microsoft Store</h3></li>
+                <li><a href="#">Account Profile</a></li>
+                <li><a href="#">Download Center</a></li>
+                <li><a href="#">Microsoft Store Support</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Older Tracking</a></li>
+            </ul>
+            <ul>
+                <li><h3>Education</h3></li>
+                <li><a href="#">Microsfot in education</a></li>
+                <li><a href="#">Office for students</a></li>
+                <li><a href="#">Office 365 for schools</a></li>
+                <li><a href="#">Deals for studentss</a></li>
+                <li><a href="#">Microsfot Azure</a></li>
+              </ul>
+              <ul>
+                <li><h3>Enterprise</h3></li>
+                <li><a href="#">Azure</a></li>
+                <li><a href="#">AppSource</a></li>
+                <li><a href="#">Automotive</a></li>
+                <li><a href="#">Government</a></li>
+                <li><a href="#">Healthcare</a></li>
+              </ul>
+              <ul>
+                <li><h3>Developer</h3></li>
+                <li><a href="#">Visual Studio</a></li>
+                <li><a href="#">Windowszs Dev Center</a></li>
+                <li><a href="#">Developer Network</a></li>
+                <li><a href="#">TechNet</a></li>
+                <li><a href="#">Microsoft Developer</a></li>
+              </ul>
+              <ul>
+                <li><h3>Company</h3></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">About Microsoft</a></li>
+                <li><a href="#">Company news</a></li>
+                <li><a href="#">Privacy at Microsoft</a></li>
+                <li><a href="#">Inverstors</a></li>
+              </ul>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-inner">
+                <div><i class="fas fa-globe fa-2x"></i>English (United States)</div>
+                <ul>
+                    <li><a href="#">Sitemap</a></li>
+                    <li><a href="#">Contact Microsoft</a></li>
+                    <li><a href="#">Privacy & cookies</a></li>
+                    <li><a href="#">Terms of use</a></li>
+                    <li><a href="#">Trademarks</a></li>
+                    <li><a href="#">Safety & eco</a></li>
+                    <li><a href="#">About our ads</a></li>
+                    <li><a href="#">&copy; Microsoft 2021</a></li>
+                </ul>
+            </div>
+        </footer>
+
+
+    
 </body>
 
 
-<link rel="stylesheet" href="index.js">
+<script src="./index.js"></script>
 </html>
