work and contact

--- a/angency_website/index.html
+++ b/angency_website/index.html
@@ -21,22 +21,22 @@
             <div class="social-bar">
                 <ul>
                     <li><a href="https://facebook.com">
-                    <img src="img/facebook-512.png" target="_blank" alt="Facebook Icon"></a></li>
+                    <img src="img/facebook.png" target="_blank" alt="Facebook Icon"></a></li>
                     <li><a href="https://github.com">
-                        <img src="img/githubicon.png" target="_blank" alt="Github Icon"></a></li>
+                        <img src="img/twitter.png" target="_blank" alt="Github Icon"></a></li>
                         <li><a href="https://linkedin.com">
-                            <img src="img/linkedin-logo-copy.png" target="_blank" alt="LinkedIn Icon"></a></li>
+                            <img src="img/instagram.png" target="_blank" alt="LinkedIn Icon"></a></li>
                             
                 </ul>
                 <a href="mailto:ian@gmail.com" class="email-icon">
-                    <img src="./img/mslogo.jpeg" alt="Microsoft Icon">
+                    <img src="./img/email.png" alt="Microsoft Icon">
                 </a>
             </div>
         </div>
     </header>
 
-    <section>
-        <img src="img/homeicon.png" class="home-img" alt="Home Icon">
+    <section class="home">
+        <img src="img/home-img.jpeg" class="home-img" alt="Home Icon">
         <div class="home-content">
             <h1>We help to achieve <br> your goals.</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae dolore illum vero incidunt mollitia. Recusandae nesciunt, nam commodi perspiciatis fugiat minus dicta facere delectus ratione praesentium repudiandae quod optio ducimus! Quo fuga</p>
