--- a/angency_website/services.html
+++ b/angency_website/services.html
@@ -43,42 +43,42 @@
        <div class="services">
            <div class="service">
                <div class="icon">
-                   <img src="" alt="">
+                   <img src="img/001.png" alt="">
                </div>
                <h2>Design</h2>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
            </div>
            <div class="service">
             <div class="icon">
-                <img src="" alt="">
+                <img src="img/002.png" alt="">
             </div>
             <h2>App Development</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
         </div>
         <div class="service">
             <div class="icon">
-                <img src="" alt="">
+                <img src="img/003.png" alt="">
             </div>
             <h2>Development</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
         </div>
         <div class="service">
             <div class="icon">
-                <img src="" alt="">
+                <img src="img/004.png" alt="">
             </div>
             <h2>Error Fixing</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
         </div>
         <div class="service">
             <div class="icon">
-                <img src="" alt="">
+                <img src="img/005.png" alt="">
             </div>
             <h2>SEO</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
         </div>
         <div class="service">
             <div class="icon">
-                <img src="" alt="">
+                <img src="img/006.png" alt="">
             </div>
             <h2>Marketing</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque officiis, ipsa doloribus eos vel unde asperiores fugiat magni fugit nam?</p>
