--- a/angency_website/work.html
+++ b/angency_website/work.html
@@ -44,96 +44,96 @@
        
        <div class="portfolio">
            <div class="item">
-               <img src="" alt="">
+               <img src="img/portfolio-item1.jpg" alt="">
                <div class="action">
                    <a href="#">Launch</a>
                </div>
            </div>
            <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item2.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item3.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item4.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item5.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item6.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item7.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item8.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item9.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item10.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item11.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div><div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item12.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item13.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item14.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item15.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="img/portfolio-item16.jpg" alt="">
             <div class="action">
                 <a href="#">Launch</a>
             </div>
