--- a/Bootstrap_website/index.html
+++ b/Bootstrap_website/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="style.css">
     <title>Frontend Bootcamp</title>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
     <div class="container">
         <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -39,9 +40,9 @@
 </nav>
 
 <!-- Showcase -->
-<section class="bg-dark text-light p-5 text-center text-sm-start">
+<section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
     <div class="container">
-        <div class="d-sm-flex">
+        <div class="d-sm-flex align-items-center justify-content-between">
             <div>
                 <h1>Become a <span class="text-warning">
                     Web Developer
@@ -51,10 +52,104 @@
                 </p>
                 <button class="btn btn-primary btn-lg">Start the Enrollment</button>
             </div>
-            <img class="img-fluid w-50" src="img/showcase.svg" alt="">
+            <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="">
         </div>
     </div>
 </section>
+
+<!-- Newsletter-->
+
+<section class="bg-primary text-light p-5">
+    <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+            <h3 class="mb-3 mb-md-0">Sign up for our newsletter</h3>
+
+            <div class="input-group news-input">
+                <input 
+                type="text" class="form-control" 
+                placeholder="Enter Email" 
+                >
+                <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Button</button>
+              </div>
+        </div>
+    </div>
+</section>
+
+<!-- Boxes -->
+<section class="p-5">
+    <div class="container">
+        <div class="row text-center g-4">
+            <div class="col-md">
+                <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                        <i class="bi bi-laptop"></i>
+                    </div>
+                    <h3 class="card-title mb-3">
+                        Virtual
+                    </h3>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id expedita earum laborum. Alias, omnis accusamus.
+                    </p>
+                    <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-secondary text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                        <i class="bi bi-person-square"></i>
+                    </div>
+                    <h3 class="card-title mb-3">
+                        Hybrid
+                    </h3>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id expedita earum laborum. Alias, omnis accusamus.
+                    </p>
+                    <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                        <i class="bi bi-people"></i>
+                    </div>
+                    <h3 class="card-title mb-3">
+                        In Person
+                    </h3>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id expedita earum laborum. Alias, omnis accusamus.
+                    </p>
+                    <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Learn Sections -->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="img/fundamentals.svg"  class="img-fluid" alt="">
+                </div>
+                <div class="col-md-5">
+                    <h2>Learn the Fundamentals</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero explicabo excepturi voluptatum nemo expedita fugit.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, corporis cupiditate aperiam dicta facilis sit at totam placeat quod, libero id asperiores, eaque illum! Accusantium magni minus quisquam reprehenderit placeat?
+                    </p>
+                    <a href="#" class="btn btn-light mt-3"></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
